--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx sequelize-cli init"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,11 @@
   },
   "homepage": "https://github.com/mgarciad34/API_TINDER#readme",
   "dependencies": {
-    "express": "^4.19.2",
-    "mysql2": "^3.9.4",
-    "pg": "^8.11.5",
-    "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
