--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.9.7",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
