--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sequelize-cli-typescript": "^3.2.0-c"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
