--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.3",
-    "sequelize-cli-typescript": "^3.2.0-c"
+    "sequelize-cli-typescript": "^3.2.0-c",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
