--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "dev": "npx nodemon src/index.js"
+    "start": "node src/app/app.js",
+    "dev": "npx nodemon src/app/app.js"
   },
   "repository": {
     "type": "git",
