--- a/package.json
+++ b/package.json
@@ -24,18 +24,27 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cross-spawn": "^7.0.6",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mem": "^10.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.3",
     "sequelize-cli-typescript": "^3.2.0-c",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "yargs-parser": "^22.0.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
-  }
+  },
+  "overrides": {
+  "yargs-parser": "^22.0.0",
+  "mem": "^10.0.0",
+  "cross-spawn": "^7.0.6"
+}
+
 }
