--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
   },
   "homepage": "https://github.com/mgarciad34/API_TINDER#readme",
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
+    "@faker-js/faker": "^10.0.0",
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "cross-spawn": "^7.0.6",
-    "dotenv": "^16.3.1",
-    "express": "^4.19.2",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "faker-js": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mem": "^10.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.7",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.3",
     "sequelize-cli-typescript": "^3.2.0-c",
@@ -42,9 +43,8 @@
     "sequelize-cli": "^6.6.2"
   },
   "overrides": {
-  "yargs-parser": "^22.0.0",
-  "mem": "^10.0.0",
-  "cross-spawn": "^7.0.6"
-}
-
+    "yargs-parser": "^22.0.0",
+    "mem": "^10.0.0",
+    "cross-spawn": "^7.0.6"
+  }
 }
